# auto-course.zju

./: GRADING_GUIDE.md  README.md  assignment_template.md  browser_manager.py  file_utils.py  grading_config.py  llm_grader.py  llm_manager.py  main.py  pyproject.toml  submission_scraper.py
example/人工智能基础（A） - 学在浙大_files/: 10246-494b2baa.js.下载  13067-3b42e012.js.下载  13149-ab088423.js.下载  13958-580eabbe.js.下载  14516-e4bd0eb5.chunk.css  14610-07d18a37.js.下载  1561-3ff15ef9.css  15612-daff88c4.css  16941-c2ecc958.js.下载  21093-1aa02d68.js.下载  212-bb9a7d4c.chunk.css  21892-03cda66b.js.下载  22541-d625efdb.js.下载  23223-9b89ab86.js.下载  23268-40f6b5e5.js.下载  2524-74e90064.js.下载  25996-369ed60a.js.下载  26132-3e4ab0d2.js.下载  2828-7ec9b0e7.chunk.css  30803-7b1f840f.js.下载  31417-0c1728e8.js.下载  33489-328d8393.js.下载  35169-f421f9c3.chunk.css  36972-886382b1.chunk.css  37066-49b17034.js.下载  3738-63068e80.js.下载  37464-2b4f7bd5.js.下载  37519-90c7b824.js.下载  38579-e131fb7d.js.下载  39000-cc4f67e7.chunk.css  39176-82f1062e.js.下载  40661-c706bf0b.js.下载  42789-f3817b0b.js.下载  42962-a2c070d7.js.下载  43812-e1337cd5.js.下载  4488-5b173e1b.chunk.css  44927-e8bff869.css  44927-eb94d1a0.js.下载  45286-95a81a23.js.下载  45531-7e7c6a72.js.下载  (+99 more)
