[project]
name = "coursezju-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "google-genai>=1.67.0",
    "google-generativeai>=0.8.6",
    "openai>=2.26.0",
    "selenium>=4.41.0",
    "socksio>=1.0.0",
    "tomli>=2.4.0",
]
